<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            style="@style/TextStyle"
            android:text="@string/welcome" />

        <TextView
            style="@style/TextStyle"
            android:text="@string/question_one" />

        <CheckBox
            android:id="@+id/question_one_a_checkbox"
            style="@style/AnswerStyle"
            android:text="@string/question_one_a" />

        <CheckBox
            android:id="@+id/question_one_b_checkbox"
            style="@style/AnswerStyle"
            android:text="@string/question_one_b" />

        <CheckBox
            android:id="@+id/question_one_c_checkbox"
            style="@style/AnswerStyle"
            android:text="@string/question_one_c" />

        <CheckBox
            android:id="@+id/question_one_d_checkbox"
            style="@style/AnswerStyle"
            android:text="@string/question_one_d" />

        <CheckBox
            android:id="@+id/question_one_e_checkbox"
            style="@style/AnswerStyle"
            android:text="@string/question_one_e" />

        <TextView
            style="@style/TextStyle"
            android:text="@string/question_two" />

        <CheckBox
            android:id="@+id/question_two_a_checkbox"
            style="@style/AnswerStyle"
            android:text="@string/question_two_a" />

        <CheckBox
            android:id="@+id/question_two_b_checkbox"
            style="@style/AnswerStyle"
            android:text="@string/question_two_b" />

        <CheckBox
            android:id="@+id/question_two_c_checkbox"
            style="@style/AnswerStyle"
            android:text="@string/question_two_c" />

        <CheckBox
            android:id="@+id/question_two_d_checkbox"
            style="@style/AnswerStyle"
            android:text="@string/question_two_d" />

        <CheckBox
            android:id="@+id/question_two_e_checkbox"
            style="@style/AnswerStyle"
            android:text="@string/question_two_e" />

        <TextView
            style="@style/TextStyle"
            android:text="@string/question_three" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/question_three_a_radio"
                style="@style/AnswerStyle"
                android:text="@string/question_three_a" />

            <RadioButton
                android:id="@+id/question_three_b_radio"
                style="@style/AnswerStyle"
                android:text="@string/question_three_b" />

            <RadioButton
                android:id="@+id/question_three_c_radio"
                style="@style/AnswerStyle"
                android:text="@string/question_three_c" />

            <RadioButton
                android:id="@+id/question_three_d_radio"
                style="@style/AnswerStyle"
                android:text="@string/question_three_d" />

            <RadioButton
                android:id="@+id/question_three_e_radio"
                style="@style/AnswerStyle"
                android:text="@string/question_three_e" />

        </RadioGroup>

        <TextView
            style="@style/TextStyle"
            android:text="@string/question_four" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/question_four_a_radio"
                style="@style/AnswerStyle"
                android:text="@string/question_four_a" />

            <RadioButton
                android:id="@+id/question_four_b_radio"
                style="@style/AnswerStyle"
                android:text="@string/question_four_b" />

            <RadioButton
                android:id="@+id/question_four_c_radio"
                style="@style/AnswerStyle"
                android:text="@string/question_four_c" />

            <RadioButton
                android:id="@+id/question_four_d_radio"
                style="@style/AnswerStyle"
                android:text="@string/question_four_d" />

            <RadioButton
                android:id="@+id/question_four_e_radio"
                style="@style/AnswerStyle"
                android:text="@string/question_four_e" />

        </RadioGroup>

        <TextView
            style="@style/TextStyle"
            android:text="@string/question_five" />

        <EditText
            android:id="@+id/question_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/question_five_hint"
            android:inputType="textCapCharacters" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:onClick="submitQuiz"
            android:text="@string/submit_button" />
    </LinearLayout>

</ScrollView>